--- a/webapp/view/mainPage.view.xml
+++ b/webapp/view/mainPage.view.xml
@@ -166,9 +166,9 @@
                                             <ComboBox
                                                 id="idComboBoxStatus01"
                                                 items="{
-                                                    path: ''
+                                                    path: 'ShStatusSet'
                                                 }">
-                                                <core:Item key="{key}" text="{text}" />
+                                                <core:Item key="{Status}" text="{Descr}" />
                                             </ComboBox>
 <!-- 
                                             <ComboBox
