Implementações: 1.1 - Ajustados os botões de 'Aprovar' e 'Reprovar' na view 'detailPage.view.xml'; 1.2 - Ajuste no formatter de status; 1.3 - Ajuste no filtro de 'Status' da view 'detailPage.view.xml'.

--- a/webapp/view/detailPage.view.xml
+++ b/webapp/view/detailPage.view.xml
@@ -197,13 +197,15 @@
                             <OverflowToolbar>
                                 <ToolbarSpacer/>
 				                <Button
+                                    id="idButtonApprove"
                                     text="Aprovar"
                                     icon="sap-icon://accept"
-                                    press="onPressButtonApprove" />
+                                    press="onPressButtonApproveDisapprove" />
 				                <Button
+                                    id="idButtonDisapprove"
                                     text="Reprovar"
                                     icon="sap-icon://decline"
-                                    press="" />
+                                    press="onPressButtonApproveDisapprove" />
                             </OverflowToolbar>
                         </headerToolbar>
 
